--- a/public/items.html
+++ b/public/items.html
@@ -15,9 +15,9 @@
   <div class = "container">
   <div class="jumbotron">
   <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">Quick explanation on how the app works.</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p>Quick explanation on how the app works.</p>
   <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
   </div>
   
@@ -25,28 +25,42 @@
                 <div class="card">
                   <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Christmas Ornaments</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Holiday Decorations for all seasons.</h5>
+                    <p class="card-text"></p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   </div>
                 </div>
                 <div class="card">
                   <img class="card-img-top" src="assets/images/sweater.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Ugly Christmas Sweaters</h5>
+                    <p class="card-text"></p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   </div>
                 </div>
                 <div class="card">
                   <img class="card-img-top" src="assets/images/bulldog.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <h5 class="card-title">Christmas Ornaments</h5>
+                    <p class="card-text"></p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   </div>
                 </div>
               </div>
+            </div>
+            <br>
+            <br>
+
+            <div class = "container">
+              <footer class = "footer float-right">
+                <div class = "container">
+                  <p>
+                    <i class = "fas fa-cat"></i>
+                    <a href="https://www.austinpetsalive.org" target = "_blank">Austin Pets Alive<br>Your donation is appreciated.</a>
+                  </p>
+                </div>
+              </footer>
+
             </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
