added input form

--- a/public/items.html
+++ b/public/items.html
@@ -47,7 +47,42 @@
                   </div>
                 </div>
               </div>
+              <br>
+              <br>
+              <form>
+                
+                <div class="form-group">
+                  <label for="exampleFormControlSelect1">Items to Donate</label>
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>Boxes</option>
+                    <option>Christmas Ornaments</option>
+                    <option>Ugly Christmas Sweaters</option>
+                    <option>Holiday Decorations</option>
+                    <option>other</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlSelect1">Area</label>
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>Central</option>
+                    <option>South</option>
+                    <option>North</option>
+                    <option>East</option>
+                    <option>West</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Brief Description of Item </label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Pickup instructions </label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+              </form>
             </div>
+            
+
             <br>
             <br>
 
@@ -57,10 +92,12 @@
                   <p>
                     <i class = "fas fa-cat"></i>
                     <a href="https://www.austinpetsalive.org" target = "_blank">Austin Pets Alive<br>Your donation is appreciated.</a>
+                    <i class = "fas fa-cat"></i>
+                    <a href="./index.html" target="_blank">Home</a>
                   </p>
                 </div>
               </footer>
-
+              </div>
             </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
