--- a/public/items.html
+++ b/public/items.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-<title>Title</title>
+
+<title>Grandma's Attic</title>
 </head>
 <body>
   <div class = "container">
@@ -73,12 +74,13 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Brief Description of Item </label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  <textarea class="form-control" id="item-text" rows="3"></textarea>
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Pickup instructions </label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  <textarea class="form-control" id="item-description" rows="3"></textarea>
                 </div>
+                <a class="btn btn-secondary btn-lg" id="submit" role="button">Submit <i class="fas fa-cat"></i></a>
               </form>
             </div>
             
@@ -100,7 +102,8 @@
               </div>
             </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src = "js/index.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
