--- a/public/items.html
+++ b/public/items.html
@@ -1,110 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
-<title>Grandma's Attic</title>
+  <title>Grandma's Attic</title>
 </head>
+
 <body>
-  <div class = "container">
-  <div class="jumbotron">
-  <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
-  <p class="lead">Quick explanation on how the app works.</p>
-  <hr class="my-4">
-  <p>Quick explanation on how the app works.</p>
-  <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
+      <p class="lead">Quick explanation on how the app works.</p>
+      <hr class="my-4">
+      <p>Quick explanation on how the app works.</p>
+      <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
+    </div>
+
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Holiday Decorations for all seasons.</h5>
+          <p class="card-text"></p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/sweater.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Ugly Christmas Sweaters</h5>
+          <p class="card-text"></p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/bulldog.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Christmas Ornaments</h5>
+          <p class="card-text"></p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <form>
+
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Items to Donate</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>Boxes</option>
+          <option>Christmas Ornaments</option>
+          <option>Ugly Christmas Sweaters</option>
+          <option>Holiday Decorations</option>
+          <option>other</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Area</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>Central</option>
+          <option>South</option>
+          <option>North</option>
+          <option>East</option>
+          <option>West</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Brief Description of Item </label>
+        <textarea class="form-control" id="item-text" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Pickup instructions </label>
+        <textarea class="form-control" id="item-description" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <a class="btn btn-secondary btn-lg" id="submit" role="button">Submit <i class="fas fa-cat"></i></a>
+      </div>
+    </form>
   </div>
-  
-        <div class="card-deck">
-                <div class="card">
-                  <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Holiday Decorations for all seasons.</h5>
-                    <p class="card-text"></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card">
-                  <img class="card-img-top" src="assets/images/sweater.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Ugly Christmas Sweaters</h5>
-                    <p class="card-text"></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card">
-                  <img class="card-img-top" src="assets/images/bulldog.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Christmas Ornaments</h5>
-                    <p class="card-text"></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-              </div>
-              <br>
-              <br>
-              <form>
-                
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Items to Donate</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Boxes</option>
-                    <option>Christmas Ornaments</option>
-                    <option>Ugly Christmas Sweaters</option>
-                    <option>Holiday Decorations</option>
-                    <option>other</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Area</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Central</option>
-                    <option>South</option>
-                    <option>North</option>
-                    <option>East</option>
-                    <option>West</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Brief Description of Item </label>
-                  <textarea class="form-control" id="item-text" rows="3"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Pickup instructions </label>
-                  <textarea class="form-control" id="item-description" rows="3"></textarea>
-                </div>
-                <a class="btn btn-secondary btn-lg" id="submit" role="button">Submit <i class="fas fa-cat"></i></a>
-              </form>
-            </div>
-            
 
-            <br>
-            <br>
 
-            <div class = "container">
-              <footer class = "footer float-right">
-                <div class = "container">
-                  <p>
-                    <i class = "fas fa-cat"></i>
-                    <a href="https://www.austinpetsalive.org" target = "_blank">Austin Pets Alive<br>Your donation is appreciated.</a>
-                    <i class = "fas fa-cat"></i>
-                    <a href="./index.html" target="_blank">Home</a>
-                  </p>
-                </div>
-              </footer>
-              </div>
-            </div>
+  <br>
+  <br>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src = "js/index.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <div class="container">
+    <footer class="footer float-right">
+      <div class="container">
+        <p>
+          <i class="fas fa-cat"></i>
+          <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive<br>Your donation is appreciated.</a>
+          <i class="fas fa-cat"></i>
+          <a href="./index.html" target="_blank">Home</a>
+        </p>
+      </div>
+    </footer>
+  </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/index.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
+
 </html>
