--- a/public/donate.html
+++ b/public/donate.html
@@ -23,38 +23,43 @@
       <hr class="my-4">
       <p>Quick explanation on how the app works.</p>
       <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
-      <a class="btn btn-secondary btn-lg" id="tbtn" href="./donate.html" role="button">Donate Here!<i class="fas fa-cat"></i></a>
     </div>
 
-    <div class="card-deck">
-      <div class="card">
-        <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Holiday Decorations for all seasons.</h5>
-          <p class="card-text"></p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="assets/images/sweater.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Ugly Christmas Sweaters</h5>
-          <p class="card-text"></p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="assets/images/bulldog.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Christmas Ornaments</h5>
-          <p class="card-text"></p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-    </div>
-    <br>
-    <br>
     
+    <form>
+
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Items to Donate</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>Boxes</option>
+          <option>Christmas Ornaments</option>
+          <option>Ugly Christmas Sweaters</option>
+          <option>Holiday Decorations</option>
+          <option>other</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlSelect1">Area</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>Central</option>
+          <option>South</option>
+          <option>North</option>
+          <option>East</option>
+          <option>West</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Brief Description of Item </label>
+        <textarea class="form-control" id="item-text" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Pickup instructions </label>
+        <textarea class="form-control" id="item-description" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <a class="btn btn-secondary btn-lg" id="submit" role="button">Submit <i class="fas fa-cat"></i></a>
+      </div>
+    </form>
   </div>
 
 
