work on routing

--- a/public/items.html
+++ b/public/items.html
@@ -16,9 +16,9 @@
   <div class = "container">
   <div class="jumbotron">
   <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
-  <p class="lead">Quick explanation on how the app works.</p>
+  <p class="lead">Ornaments, Ugly Christmas Sweaters, and more.</p>
   <hr class="my-4">
-  <p>Quick explanation on how the app works.</p>
+  <p>Ornaments, Ugly Christmas Sweaters, and more.</p>
   <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
   </div>
   
@@ -54,17 +54,17 @@
                 
                 <div class="form-group">
                   <label for="exampleFormControlSelect1">Items to Donate</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
+                  <select class="form-control" id="item-dropdown">
                     <option>Boxes</option>
                     <option>Christmas Ornaments</option>
                     <option>Ugly Christmas Sweaters</option>
                     <option>Holiday Decorations</option>
-                    <option>other</option>
+                    <option>Other</option>
                   </select>
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlSelect1">Area</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
+                  <select class="form-control" id="item-area">
                     <option>Central</option>
                     <option>South</option>
                     <option>North</option>
