--- a/public/items.html
+++ b/public/items.html
@@ -1,107 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-<title>Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+  <title>Grandma's Attic</title>
 </head>
+
 <body>
-  <div class = "container">
-  <div class="jumbotron">
-  <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
-  <p class="lead">Quick explanation on how the app works.</p>
-  <hr class="my-4">
-  <p>Quick explanation on how the app works.</p>
-  <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
+      <p class="lead">A place to donate your gently used or unused holiday items.</p>
+      <hr class="my-4">
+      <p>Browse through a selection of holiday decor and goods.</p>
+      <div class="form-row d-flex justify-content-center">
+        <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
+        <a class="btn btn-secondary btn-lg" href="./newPost.html" role="button">List an Item <i class="fas fa-cat"></i></a>
+      </div>
+    </div>
+
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="assets/images/xmas.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Christmas</h5>
+          <p class="card-text"><small class="text-muted">
+              <p>Xmas Trees</p>
+              <p>Ornaments</p>
+              <p>Stockings</p>
+            </small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/vday.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Valentine's Day</h5>
+          <p class="card-text"><small class="text-muted">
+              <p>Exchange Cards</p>
+              <p>Tableware</p>
+              <p>Decorations</p>
+            </small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/egg.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Easter</h5>
+          <p class="card-text"><small class="text-muted">
+              <p>Easter Eggs</p>
+              <p>Baskets</p>
+              <p>Bunnies</p>
+            </small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/flag.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">4th of July</h5>
+          <p class="card-text"><small class="text-muted">
+              <p>American Flags</p>
+              <p>Sparklers</p>
+              <p>Banners</p>
+            </small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/jack.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Halloween</h5>
+          <p class="card-text"><small class="text-muted">
+              <p>Outdoor Decorations</p>
+              <p>Costumes</p>
+              <p>Pumpkins</p>
+            </small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/thanks.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Thanksgiving</h5>
+          <p class="card-text"><small class="text-muted">
+              <p>Thanksgiving Decorations</p>
+              <p>Center Pieces</p>
+              <p>Tableware</p>
+            </small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/balloon.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Birthday</h5>
+          <p class="card-text"><small class="text-muted">
+              <p>Party Hats</p>
+              <p>Streamers/Signs</p>
+              <p>Candles</p>
+            </small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Other</h5>
+          <p class="card-text"><small class="text-muted">
+              <p>Boxes</p>
+              <p>Wrapping Paper</p>
+              <p>Lights</p>
+            </small></p>
+        </div>
+      </div>
+
+    </div>
+    <br>
+    <br>
+
+
+    <br>
+    <br>
+
+    <div class="container">
+      <footer class="footer float-right">
+        <div class="container">
+          <p>
+            <i class="fas fa-cat"></i>
+            <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive<br>Your donation is
+              appreciated.</a>
+            <i class="fas fa-cat"></i>
+            <a href="./index.html" target="_blank">Home</a>
+          </p>
+        </div>
+      </footer>
+    </div>
   </div>
-  
-        <div class="card-deck">
-                <div class="card">
-                  <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Holiday Decorations for all seasons.</h5>
-                    <p class="card-text"></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card">
-                  <img class="card-img-top" src="assets/images/sweater.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Ugly Christmas Sweaters</h5>
-                    <p class="card-text"></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card">
-                  <img class="card-img-top" src="assets/images/bulldog.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Christmas Ornaments</h5>
-                    <p class="card-text"></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-              </div>
-              <br>
-              <br>
-              <form>
-                
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Items to Donate</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Boxes</option>
-                    <option>Christmas Ornaments</option>
-                    <option>Ugly Christmas Sweaters</option>
-                    <option>Holiday Decorations</option>
-                    <option>other</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Area</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Central</option>
-                    <option>South</option>
-                    <option>North</option>
-                    <option>East</option>
-                    <option>West</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Brief Description of Item </label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Pickup instructions </label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-              </form>
-            </div>
-            
 
-            <br>
-            <br>
-
-            <div class = "container">
-              <footer class = "footer float-right">
-                <div class = "container">
-                  <p>
-                    <i class = "fas fa-cat"></i>
-                    <a href="https://www.austinpetsalive.org" target = "_blank">Austin Pets Alive<br>Your donation is appreciated.</a>
-                    <i class = "fas fa-cat"></i>
-                    <a href="./index.html" target="_blank">Home</a>
-                  </p>
-                </div>
-              </footer>
-              </div>
-            </div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
+
 </html>
