--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery.js"></script>
 
   <title>Grandma's Attic</title>
 </head>
@@ -23,7 +24,7 @@
 
       <p class="cat">A place to donate your gently used or unused holiday items.</p>
       <div class="form-row d-flex justify-content-center">
-        <a class="btn btn-secondary btn-lg" href="./items.html" role="button">Enter Attic <i class="fas fa-cat"></i></a>
+        <a class="btn btn-secondary btn-lg" id="fBtn" href="./items.html" role="button">Enter Attic <i class="fas fa-cat"></i></a>
       </div>
 
     </div>
