--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
       <hr class="my-4">
 
-      <p class="cat">A place to donate your gently used or unused holiday items.</p>
+      <p class="lead">A place to donate your gently used or unused holiday items.</p>
       <div class="form-row d-flex justify-content-center">
         <a class="btn btn-secondary btn-lg" id="fBtn" href="./items.html" role="button">Enter Attic <i class="fas fa-cat"></i></a>
       </div>
