--- a/public/donate.html
+++ b/public/donate.html
@@ -20,11 +20,11 @@
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
-      <p class="lead">A place to donate your gently used or unused holiday items.</p>
+      <p class="cat">A place to donate your gently used or unused holiday items.</p>
       <hr class="my-4">
       <p>Post an item to the Attic!.</p>
-      <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
-      <a class="btn btn-secondary btn-lg" id="tbtn" href="./items.html" role="button">Browse items<i class="fas fa-cat"></i></a>
+      <a class="btn btn-secondary btn-lg" id="nBtn" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
+      <a class="btn btn-secondary btn-lg" id="bbtn" href="./items.html" role="button">Browse items<i class="fas fa-cat"></i></a>
     </div>
 
 
