--- a/public/items.html
+++ b/public/items.html
@@ -25,7 +25,7 @@
       <hr class="my-4">
       <p>Browse through a selection of holiday decor and goods.</p>
       <div class="form-row d-flex justify-content-center">
-        <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
+        <a class="btn btn-secondary btn-lg" id="fBtn" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
         <a class="btn btn-secondary btn-lg" id="tbtn" href="./donate.html" role="button">Donate Here! <i class="fas fa-cat"></i></a>
       </div>
     </div>
@@ -152,7 +152,7 @@
 
       <div class="card">
         <div class="card-header">
-          Item Database
+          Item's Available
         </div>
         <div class="card-body" id="item-section">
 
