--- a/public/items.html
+++ b/public/items.html
@@ -41,7 +41,7 @@
             <div class="card-body">
               <h5 class="card-title">Christmas</h5>
               <p class="card-text"><small class="text-muted">
-                  <p>Xmas Trees</p>
+                  <p>Christmas Trees</p>
                   <p>Ornaments</p>
                   <p>Stockings</p>
                 </small></p>
@@ -126,7 +126,7 @@
               <p class="card-text"><small class="text-muted">
                   <p>Party Hats</p>
                   <p>Streamers/Signs</p>
-                  <p>Candels</p>
+                  <p>Candles</p>
                 </small></p>
             </div>
           </div>
@@ -152,7 +152,7 @@
 
       <div class="card">
         <div class="card-header">
-          Item's Available
+          Items Available
         </div>
         <div class="card-body" id="item-section">
 
