--- a/public/items.html
+++ b/public/items.html
@@ -152,7 +152,7 @@
 
       <div class="card">
         <div class="card-header">
-          Item's Available
+          Items Available
         </div>
         <div class="card-body" id="item-section">
 
