--- a/public/donate.html
+++ b/public/donate.html
@@ -22,7 +22,7 @@
       <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
       <p class="cat">A place to donate your gently used or unused holiday items.</p>
       <hr class="my-4">
-      <p>Post an item to the Attic!.</p>
+      <p>Post an item to the Attic!</p>
       <a class="btn btn-secondary btn-lg" id="nBtn" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
       <a class="btn btn-secondary btn-lg" id="bbtn" href="./items.html" role="button">Browse items<i class="fas fa-cat"></i></a>
     </div>
@@ -56,6 +56,10 @@
       </div>
       <div class="form-group">
         <label for="exampleFormControlTextarea1">Pickup instructions </label>
+        <textarea class="form-control" id="item-pickup" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Available Until </label>
         <textarea class="form-control" id="item-pickup" rows="3"></textarea>
       </div>
       <div class="form-group">
