holiday card buttons working

--- a/public/items.html
+++ b/public/items.html
@@ -38,7 +38,7 @@
           <div class="card">
             <img class="card-img-top" src="assets/images/xmas.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Christmas</h5>
+              <h5 class="card-title cat">Christmas</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Xmas Trees</p>
                   <p>Ornaments</p>
@@ -52,7 +52,7 @@
           <div class="card">
             <img class="card-img-top" src="assets/images/vday.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Valentine's Day</h5>
+              <h5 class="card-title cat">Valentine's Day</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Exchange Cards</p>
                   <p>Tableware</p>
@@ -65,7 +65,7 @@
           <div class="card">
             <img class="card-img-top" src="assets/images/egg.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Easter</h5>
+              <h5 class="card-title cat">Easter</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Easter Eggs</p>
                   <p>Baskets</p>
@@ -78,7 +78,7 @@
           <div class="card">
             <img class="card-img-top" src="assets/images/flag.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">4th of July</h5>
+              <h5 class="card-title cat">4th of July</h5>
               <p class="card-text"><small class="text-muted">
                   <p>American Flags</p>
                   <p>Sparklers</p>
@@ -95,7 +95,7 @@
           <div class="card" id="halloween">
             <img class="card-img-top" src="assets/images/jack.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Halloween</h5>
+              <h5 class="card-title cat">Halloween</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Outdoor Decorations</p>
                   <p>Costumes</p>
@@ -108,7 +108,7 @@
           <div class="card">
             <img class="card-img-top" src="assets/images/thanks.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Thanksgiving</h5>
+              <h5 class="card-title cat">Thanksgiving</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Thanksgiving Decorations</p>
                   <p>Center Pieces</p>
@@ -121,7 +121,7 @@
           <div class="card" id="birthday">
             <img class="card-img-top" src="assets/images/balloon.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Birthday</h5>
+              <h5 class="card-title cat">Birthday</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Party Hats</p>
                   <p>Streamers/Signs</p>
@@ -134,7 +134,7 @@
           <div class="card">
             <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Other</h5>
+              <h5 class="card-title cat">Other</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Boxes</p>
                   <p>Wrapping Paper</p>
@@ -175,6 +175,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="js/items.js"></script>
 </body>
 
 </html>
