--- a/public/items.html
+++ b/public/items.html
@@ -41,7 +41,7 @@
             <div class="card-body">
               <h5 class="card-title">Christmas</h5>
               <p class="card-text"><small class="text-muted">
-                  <p>Xmas Trees</p>
+                  <p>Christmas Trees</p>
                   <p>Ornaments</p>
                   <p>Stockings</p>
                 </small></p>
@@ -113,7 +113,7 @@
               <p class="card-text"><small class="text-muted">
                   <p>Thanksgiving Decorations</p>
                   <p>Center Pieces</p>
-                  <p>Tableware</p>
+                  <p>Thanksgiving Tableware</p>
                 </small></p>
             </div>
           </div>
@@ -126,7 +126,7 @@
               <p class="card-text"><small class="text-muted">
                   <p>Party Hats</p>
                   <p>Streamers/Signs</p>
-                  <p>Candels</p>
+                  <p>Birthday Candles</p>
                 </small></p>
             </div>
           </div>
@@ -135,7 +135,7 @@
           <div class="card">
             <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Other</h5>
+              <h5 class="card-title">Other Occasions</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Boxes</p>
                   <p>Wrapping Paper</p>
@@ -152,7 +152,7 @@
 
       <div class="card">
         <div class="card-header">
-          Item's Available
+          Items Available
         </div>
         <div class="card-body" id="item-section">
 
@@ -186,6 +186,7 @@
   </div>
   </div>
   <script src="./js/browse.js"></script>
+  <script src="./js/items.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
