update apiroutes and add html

--- a/public/donate.html
+++ b/public/donate.html
@@ -34,45 +34,13 @@
         <!--Trying to create a dropdown that will load options based on the category selected above (might also just include a single dropdown with each subcategory indented)-->
         <select class="form-control" id="item">
           <option>Christmas</option>
-          <option>&nbsp;Christmas Trees</option>
-          <option>&nbsp;Ornaments</option>
-          <option>&nbsp;Stockings</option>
-          <option>&nbsp;Other (Christmas)</option>
           <option>Valentine's Day</option>
-          <option>&nbsp;Exchange Cards</option>
-          <option>&nbsp;Tableware</option>
-          <option>&nbsp;Decorations</option>
-          <option>&nbsp;Other (Valentine's Day)</option>
           <option>Easter</option>
-          <option>&nbsp;Easter Eggs</option>
-          <option>&nbsp;Baskets</option>
-          <option>&nbsp;Bunnies</option>
-          <option>&nbsp;Other (Easter)</option>
-          <option>4th of July</option>
-          <option>&nbsp;American Flags</option>
-          <option>&nbsp;Sparklers</option>
-          <option>&nbsp;Banners</option>
-          <option>&nbsp;Other (4th of July)</option>
+          <option>Fourth of July</option>
           <option>Halloween</option>
-          <option>&nbsp;Outdoor Decorations</option>
-          <option>&nbsp;Costumes</option>
-          <option>&nbsp;Pumpkins</option>
-          <option>&nbsp;Other (Halloween)</option>
           <option>Thanksgiving</option>
-          <option>&nbsp;Thanksgiving Decorations</option>
-          <option>&nbsp;Center Pieces</option>
-          <option>&nbsp;Thanksgiving Tableware</option>
-          <option>&nbsp;Other (Thanksgiving)</option>
           <option>Birthday</option>
-          <option>&nbsp;Party Hats</option>
-          <option>&nbsp;Streamers/Signs</option>
-          <option>&nbsp;Birthday Candles</option>
-          <option>&nbsp;Other (Birthday)</option>
-          <option>Other Occasions</option>
-          <option>&nbsp;Boxes</option>
-          <option>&nbsp;Wrapping Paper</option>
-          <option>&nbsp;Lights</option>
-          <option>&nbsp;Other (Other Occasions)</option>
+          <option>Other</option>
         </select>
       </div>
       <div class="form-group">
