--- a/public/items.html
+++ b/public/items.html
@@ -31,10 +31,10 @@
 
 
 
-    <div class="card-deck">
 
+    <div class="card-deck mt-4">
       <div class="row">
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card">
             <img class="card-img-top" src="assets/images/xmas.jpg" alt="Card image cap">
             <div class="card-body">
@@ -48,9 +48,9 @@
           </div>
         </div>
 
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card">
-            <img class="card-img-top" src="assets/images/vday.jpg" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/hearts.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Valentine's Day</h5>
               <p class="card-text"><small class="text-muted">
@@ -61,9 +61,9 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card">
-            <img class="card-img-top" src="assets/images/egg.jpg" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/bunny.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Easter</h5>
               <p class="card-text"><small class="text-muted">
@@ -74,7 +74,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card">
             <img class="card-img-top" src="assets/images/flag.jpg" alt="Card image cap">
             <div class="card-body">
@@ -88,12 +88,14 @@
           </div>
         </div>
       </div>
+    </div>
 
 
+    <div class="card-deck mt-4">
       <div class="row">
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card" id="halloween">
-            <img class="card-img-top" src="assets/images/jack.jpg" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/halloween.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Halloween</h5>
               <p class="card-text"><small class="text-muted">
@@ -104,7 +106,8 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+
+        <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card">
             <img class="card-img-top" src="assets/images/thanks.jpg" alt="Card image cap">
             <div class="card-body">
@@ -117,22 +120,22 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card" id="birthday">
-            <img class="card-img-top" src="assets/images/balloon.jpg" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/birthday.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Birthday</h5>
               <p class="card-text"><small class="text-muted">
                   <p>Party Hats</p>
                   <p>Streamers/Signs</p>
-                  <p>Candels</p>
+                  <p>Candles</p>
                 </small></p>
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card">
-            <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/dog.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Other</h5>
               <p class="card-text"><small class="text-muted">
@@ -144,9 +147,10 @@
           </div>
         </div>
       </div>
-
-
     </div>
+
+
+  </div>
   </div>
 
   <br>
