add html files, buttons and updated api

--- a/public/donate.html
+++ b/public/donate.html
@@ -12,6 +12,8 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
+
 
   <title>Grandma's Attic</title>
 </head>
@@ -29,9 +31,9 @@
 
 
     <form>
+
       <div class="form-group">
         <label for="exampleFormControlSelect1">Items to Donate</label>
-        <!--Trying to create a dropdown that will load options based on the category selected above (might also just include a single dropdown with each subcategory indented)-->
         <select class="form-control" id="item">
           <option>Christmas</option>
           <option>Valentine's Day</option>
@@ -60,6 +62,10 @@
       <div class="form-group">
         <label for="exampleFormControlTextarea1">Pickup instructions </label>
         <textarea class="form-control" id="item-pickup" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Available Until (YYYY-MM-DD)</label>
+        <textarea class="form-control" id="item-availability" rows="3"></textarea>
       </div>
       <div class="form-group">
         <a class="btn btn-secondary btn-lg" id="submit" role="button">Submit <i class="fas fa-cat"></i></a>
