--- a/public/items.html
+++ b/public/items.html
@@ -20,18 +20,13 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-4">Grandma's
-        <i class="fas fa-cat"></i> Attic!</h1>
+      <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
       <p class="lead">A place to donate your gently used or unused holiday items.</p>
       <hr class="my-4">
       <p>Browse through a selection of holiday decor and goods.</p>
       <div class="form-row d-flex justify-content-center">
-        <a class="btn btn-secondary btn-lg" id="fBtn" href="./index.html" role="button">Exit Attic
-          <i class="fas fa-cat"></i>
-        </a>
-        <a class="btn btn-secondary btn-lg" id="tbtn" href="./donate.html" role="button">Donate Here!
-          <i class="fas fa-cat"></i>
-        </a>
+        <a class="btn btn-secondary btn-lg" id="fBtn" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
+        <a class="btn btn-secondary btn-lg" id="tbtn" href="./donate.html" role="button">Donate Here! <i class="fas fa-cat"></i></a>
       </div>
     </div>
 
@@ -173,12 +168,12 @@
 
       <div class="card">
         <div class="card-header">
-          Items Available:
+          Items Available
         </div>
         <div class="card-body" id="item-section">
 
           <!-- Content will go in here -->
-          <!--<button class="test">Test</button>-->
+
         </div>
       </div>
     </div>
@@ -197,9 +192,8 @@
       <div class="container">
         <p>
           <i class="fas fa-cat"></i>
-          <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive
-            <br>Your donation is appreciated.
-          </a>
+          <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive<br>Your donation is
+            appreciated.</a>
           <i class="fas fa-cat"></i>
           <a href="./index.html" target="_blank">Home</a>
         </p>
@@ -209,13 +203,6 @@
   </div>
   <script src="./js/browse.js"></script>
   <script src="./js/items.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('.claimBtn').on('click', function () {
-        console.log("Item Claimed")
-      })
-    })
-  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
