--- a/public/christmas.html
+++ b/public/christmas.html
@@ -38,14 +38,10 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="card" id="christmas">
-            <img class="card-img-top" src="assets/images/xmas.jpg" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/xmastree.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Christmas</h5>
-              <p class="card-text"><small class="text-muted">
-                  <p>Christmas Trees</p>
-                  <p>Ornaments</p>
-                  <p>Stockings</p>
-                </small></p>
+
             </div>
           </div>
         </div>
