--- a/public/halloween.html
+++ b/public/halloween.html
@@ -38,14 +38,9 @@
       <div class="row">
         <div class="col-lg-12">
             <div class="card" id="halloween">
-                <img class="card-img-top" src="assets/images/jack.jpg" alt="Card image cap">
+                <img class="card-img-top" src="assets/images/skeletons.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Halloween</h5>
-                  <p class="card-text"><small class="text-muted">
-                      <p>Outdoor Decorations</p>
-                      <p>Costumes</p>
-                      <p>Pumpkins</p>
-                    </small></p>
                 </div>
               </div>
         </div>
