--- a/public/thanksgiving.html
+++ b/public/thanksgiving.html
@@ -38,14 +38,10 @@
       <div class="row">
         <div class="col-lg-12"> 
           <div class="card">
-            <img class="card-img-top" src="assets/images/thanks.jpg" alt="Card image cap">
+            <img class="card-img-top" src="assets/images/corn.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Thanksgiving</h5>
-              <p class="card-text"><small class="text-muted">
-                  <p>Thanksgiving Decorations</p>
-                  <p>Center Pieces</p>
-                  <p>Thanksgiving Tableware</p>
-                </small></p>
+
             </div>
           </div>
         </div>
