--- a/public/fourthofjuly.html
+++ b/public/fourthofjuly.html
@@ -38,14 +38,10 @@
       <div class="row">
         <div class="col-lg-12">
             <div class="card">
-                <img class="card-img-top" src="assets/images/flag.jpg" alt="Card image cap">
+                <img class="card-img-top" src="assets/images/flags.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">4th of July</h5>
-                  <p class="card-text"><small class="text-muted">
-                      <p>American Flags</p>
-                      <p>Sparklers</p>
-                      <p>Banners</p>
-                    </small></p>
+
                 </div>
               </div>
         </div>
