--- a/public/other.html
+++ b/public/other.html
@@ -38,14 +38,10 @@
       <div class="row">
         <div class="col-lg-12">
             <div class="card">
-                <img class="card-img-top" src="assets/images/grandma.jpg" alt="Card image cap">
+                <img class="card-img-top" src="assets/images/bday.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Other Occasions</h5>
-                  <p class="card-text"><small class="text-muted">
-                      <p>Boxes</p>
-                      <p>Wrapping Paper</p>
-                      <p>Lights</p>
-                    </small></p>
+
                 </div>
               </div>
         </div>
