update Goodwill API

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,20 @@
       </a>
     </div>
   </div>
+  <div class="container">
+      <footer class="footer float-right">
+        <div class="container">
+          <p>
+            <i class="fas fa-cat"></i>
+            <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive<br>Your donation is appreciated.</a>
+            <i class="fas fa-cat"></i>
+            <i class="fas fa-cat"></i>
+            <a href="./goodwill.html" target="_blank">Find a Goodwill in your area</a>
+            
+          </p>
+        </div>
+      </footer>
+    </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
