--- a/public/donate.html
+++ b/public/donate.html
@@ -86,6 +86,8 @@
           <i class="fas fa-cat"></i>
           <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive<br>Your donation is appreciated.</a>
           <i class="fas fa-cat"></i>
+          <i class="fas fa-cat"></i>
+          <a href="./goodwill.html" target="_blank">Find a Goodwill in your area</a>
           <a href="./index.html" target="_blank">Home</a>
         </p>
       </div>
