--- a/public/goodwill.html
+++ b/public/goodwill.html
@@ -55,8 +55,8 @@
       <div class="card-body">
           <form>
         <div class="form-group">
-            <label for="exampleFormControlTextarea1">Your City and State</label>
-            <input class="form-control" placeholder = "Example: Austin, TX" id="goodwills" />
+            <label for="exampleFormControlTextarea1">Enter Your City and State or 5-digit ZIP Code to find up to 3 locations in your area.</label>
+            <input class="form-control" placeholder = "Example: Austin, TX or 78704" id="goodwills" />
           </div>
           <div class="form-group">
             <a class="btn btn-secondary btn-lg" id="entercitystate" role="button">Submit <i class="fas fa-cat"></i></a>
@@ -71,6 +71,18 @@
       </div>
     </div>
   </div>
+  <div class="container">
+        <footer class="footer float-right">
+          <div class="container">
+            <p>
+              <i class="fas fa-cat"></i>
+              <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive<br>Your donation is appreciated.</a>
+              <i class="fas fa-cat"></i>
+              <a href="./index.html" target="_blank">Home</a>
+            </p>
+          </div>
+        </footer>
+      </div>
   <script src="./js/browse.js"></script>
   <script src="./js/items.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
