--- a/public/items.html
+++ b/public/items.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
-      <p class="lead">A place to donate your gently used or unused holiday items.</p>
+      <p class="lead">A place to donate your gently used & unused holiday items.</p>
       <hr class="my-4">
       <p>Browse through a selection of holiday decor and goods.</p>
       <div class="form-row d-flex justify-content-center">
@@ -177,11 +177,11 @@
   <div class="col-lg-12">
 
 
-      <div class="card">
-        <div class="card-header">
-          Items Available
-        </div>
-        <div class="card-body" id="item-section">
+    <div class="card">
+      <div class="card-header">
+        Items Available
+      </div>
+      <div class="card-body" id="item-section">
 
 
         <!-- Content will go in here -->
