--- a/public/christmas.html
+++ b/public/christmas.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
-      <p class="lead">A place to donate your gently used or unused holiday items.</p>
+      <p class="lead">A place to donate your gently used & unused holiday items.</p>
       <hr class="my-4">
       <p>Browse through a selection of holiday decor and goods.</p>
       <div class="form-row d-flex justify-content-center">
@@ -35,36 +35,36 @@
 
 
 
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="card" id="christmas">
-            <img class="card-img-top" src="assets/images/xmas.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Christmas</h5>
-              <p class="card-text"><small class="text-muted">
-                  <p>Christmas Trees</p>
-                  <p>Ornaments</p>
-                  <p>Stockings</p>
-                </small></p>
-            </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card" id="christmas">
+          <img class="card-img-top" src="assets/images/xmas.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Christmas</h5>
+            <p class="card-text"><small class="text-muted">
+                <p>Christmas Trees</p>
+                <p>Ornaments</p>
+                <p>Stockings</p>
+              </small></p>
           </div>
         </div>
+      </div>
 
-       
-    <div class="col-lg-12">
 
-      <div class="card">
-        <div class="card-header">
-          Items Available:
-        </div>
-        <div class="card-body" id="christmas-items">
+      <div class="col-lg-12">
 
-          <!-- Content will go in here -->
+        <div class="card">
+          <div class="card-header">
+            Items Available:
+          </div>
+          <div class="card-body" id="christmas-items">
 
+            <!-- Content will go in here -->
+
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
   </div>
 
@@ -90,7 +90,7 @@
   </div>
   <script src="./js/browse.js"></script>
   <script src="./js/items.js"></script>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
