--- a/public/halloween.html
+++ b/public/halloween.html
@@ -35,36 +35,36 @@
 
 
 
-      <div class="row">
-        <div class="col-lg-12">
-            <div class="card" id="halloween">
-                <img class="card-img-top" src="assets/images/jack.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Halloween</h5>
-                  <p class="card-text"><small class="text-muted">
-                      <p>Outdoor Decorations</p>
-                      <p>Costumes</p>
-                      <p>Pumpkins</p>
-                    </small></p>
-                </div>
-              </div>
+    <div class="row">
+      <div class="col-lg-12 center">
+        <div class="card" id="halloween">
+          <img class="card-img-top" src="assets/images/jack.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Halloween</h5>
+            <p class="card-text"><small class="text-muted">
+                <p>Outdoor Decorations</p>
+                <p>Costumes</p>
+                <p>Pumpkins</p>
+              </small></p>
+          </div>
         </div>
+      </div>
 
-       
-    <div class="col-lg-12">
 
-      <div class="card">
-        <div class="card-header">
-          Items Available:
-        </div>
-        <div class="card-body" id="halloween-items">
+      <div class="col-lg-12">
 
-          <!-- Content will go in here -->
+        <div class="card">
+          <div class="card-header">
+            Items Available:
+          </div>
+          <div class="card-body" id="halloween-items">
 
+            <!-- Content will go in here -->
+
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
   </div>
 
@@ -90,7 +90,7 @@
   </div>
   <script src="./js/browse.js"></script>
   <script src="./js/items.js"></script>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
