--- a/public/christmas.html
+++ b/public/christmas.html
@@ -12,6 +12,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
 
   <title>Grandma's Attic</title>
 </head>
