--- a/public/donate.html
+++ b/public/donate.html
@@ -69,6 +69,7 @@
         <label for="exampleFormControlTextarea1">Available Until (YYYY-MM-DD)</label>
         <textarea class="form-control" id="item-availability" rows="3"></textarea>
       </div>
+
       <div class="form-group">
         <a class="btn btn-secondary btn-lg" id="submit" role="button">Submit <i class="fas fa-cat"></i></a>
       </div>
@@ -97,6 +98,7 @@
   <script src="./js/donate.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/browse.js"></script>
+  <script src="js/momentTest.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
