--- a/public/items.html
+++ b/public/items.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   <script src="https://code.jquery.com/jquery.js"></script>
-
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
   <title>Grandma's Attic</title>
 </head>
 
@@ -221,6 +221,7 @@
   </div>
   <script src="./js/browse.js"></script>
   <script src="./js/items.js"></script>
+  <script src="js/momentTest.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
