fix routing error

--- a/public/donate.html
+++ b/public/donate.html
@@ -36,7 +36,7 @@
         <label for="exampleFormControlSelect1">Items to Donate</label>
         <select class="form-control" id="item">
           <option>Christmas</option>
-          <option>Valentine's Day</option>
+          <option>Valentines</option>
           <option>Easter</option>
 
           <option>Fourth of July</option>
