--- a/public/cloudinarytest.html
+++ b/public/cloudinarytest.html
@@ -9,18 +9,25 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
   <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
-<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-    <title>Cloudinary test</title>
+  
 </head>
 <body>
     <div class="card">
-        <img src="http://fillmurray.com/g/300/300" id="img-preview" />
+        <!--<img src="http://fillmurray.com/g/300/300" id="img-preview" />
         <label class="file-upload-container" for="file-upload">
           <input id="file-upload" type="file" style="display:none;">
           Select an Image
-        </label>
-      </div>
-      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-      <script src="js/browse.js"></script>
+        </label>-->
+        <a href="#" id="upload_widget_opener">Upload multiple images</a>
+
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>  
+
+<script type="text/javascript">  
+  var myUploadWidget;
+  document.getElementById("upload_widget_opener").addEventListener("click", function() {
+    myUploadWidget = cloudinary.openUploadWidget({ 
+      cloudName: 'demo', uploadPreset: 'preset1'}, (error, result) => { });
+  }, false);
+</script>
 </body>
 </html>
