still not working, but progress

--- a/public/donate.html
+++ b/public/donate.html
@@ -78,7 +78,7 @@
 
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="./js/donate.js" type="text/javascript"></script>
+<!--   <script src="./js/donate.js" type="text/javascript"></script> -->
 
       <div class="form-group">
         <a class="btn btn-secondary btn-lg" id="submit" role="button">Submit <i class="fas fa-cat"></i></a>
